--- a/Week2.html
+++ b/Week2.html
@@ -3,7 +3,7 @@
     <head> <!--Stores all metadate for the page (ex. titles)-->
         <title>Welcome to my page!</title>
         <link rel="stylesheet" href="ResponsiveSheet.css">
-        <link rel="stylesheet" href="Styles_1.css">
+        <link rel="stylesheet" href="https://github.com/tcano0505/milestone2/blob/main/Styles_1.css">
     </head>
     <style>
       img {
