--- a/index.html
+++ b/index.html
@@ -122,8 +122,11 @@
 
       <h1 id="course_projects">Projects in CUS1172</h1>
       <ul>
+       <li>
+          <a href="https://tcano0505.github.io/CUS1172_Milestone1/" target="_blank" class="link"> Assignment#1 - Milestone #1</a>
+        </li>
         <li>
-          <a href="https://github.com/tcano0505/CUS1172_WebDev/blob/main/index.html" target="_blank" class="link"> Milestone #1</a>
+          <a href="https://tcano0505.github.io/milestone2/" target="_blank" class="link"> Assignment#1 - Milestone #2</a>
         </li>
       </ul>
     </body>
